# ramate-web

./: .gitignore  .ltex-ls-plus.json  Cargo.toml  README.md  flake.nix
assets/: footer.template.md  oac-transparent.b64
fronts/web/: Echo.proto  grpc.sh  index.html  package.json  vite.config.ts
fronts/web/src/: index.css  main.tsx
fronts/web/src/apps/Main/: App.tsx  Home.tsx  Model.tsx
fronts/web/src/data/deployer/: runtimeUrl.tsx  sidecarUrl.tsx  startModel.tsx
fronts/web/src/data/model/: model.tsx
fronts/web/src/data/runtime/: branches.ts  model.tsx  prompt.ts  summary.ts
fronts/web/src/data/sidecar/: lines.ts  model.ts  modelUrl.ts
fronts/web/src/data/util/: useLatentCache.ts
fronts/web/src/fixtures/: color.ts  engagements.ts
fronts/web/src/presentation/components/: index.ts
fronts/web/src/presentation/components/cards/: index.ts
fronts/web/src/rpc/: EchoServiceClientPb.ts  Echo_grpc_web_pb.js  Echo_pb.d.ts  Echo_pb.js  package-lock.json  package.json
fronts/web/src/util/: index.ts
proto/: entry.proto
services/entry/: .gitignore  Cargo.toml  Dockerfile  build.rs
services/entry/src/: client.rs  entry.rs  entry_test.rs  server.rs
services/entry/src/data/: mod.rs
services/entry/src/data/acl/: mod.rs  redis_acl.rs  redis_acl_test.rs
services/entry/src/data/collection/: mod.rs  redis_collection.rs  redis_collection_test.rs
services/entry/src/data/crud/: mod.rs  redis_crud.rs  redis_crud_test.rs
services/entry/src/data/index/: mod.rs  redis_index.rs
services/entry/src/data/indices/: mod.rs  redis_indexer.rs
services/entry/src/logic/: mod.rs
services/entry/src/logic/correspondence/: email.rs  email_test.rs  inquirer.rs  mod.rs  sendgrid.rs  twilio.rs  twilio_test.rs
services/entry/src/util/: mod.rs
services/entry/src/util/acl/: acl.rs
services/entry/src/util/collection/: collection.rs  mod.rs  user_collection.rs
services/entry/src/util/crud/: crud.rs  id.rs  mod.rs  user_crud.rs
services/entry/src/util/index/: index.rs  user_index.rs
services/entry/src/util/indices/: index.rs  mod.rs  user_index.rs
services/entry/src/util/privilege/: privilege.rs
services/entry/src/util/redis/: mod.rs  redis.rs  redis_test.rs
services/entry/src/util/user/: token.rs  user.rs
services/model-deployer/: .gitignore  Dockerfile  pyproject.toml  run.py
services/model-deployer/model_deployer/: __init__.py
services/model-deployer/model_deployer/logic/: __init__.py
services/model-runtime/: Dockerfile  pyproject.toml  run.py
services/model-runtime/model_runtime/: __init__.py
services/model-sidecar/: .gitignore  Dockerfile  main.tf  pyproject.toml  requirements.txt  run.py  terraform.sh
services/model-sidecar/model_sidecar/: __init__.py
services/model-sidecar/model_sidecar/logic/model_manager/: __init__.py  model_manager.py
services/model-sidecar/model_sidecar/logic/model_manager/providers/: __init__.py
services/model-sidecar/model_sidecar/logic/model_manager/providers/tf_model_manager/: __init__.py  tf_model_manager.py  tf_model_manager__test.py
services/model-sidecar/model_sidecar/presentation/server/: __init__.py  server.py
services/model-sidecar/model_sidecar/presentation/server/providers/: __init__.PY
services/model-sidecar/model_sidecar/presentation/server/providers/model_manager_server/: __init__.py  model_manager_server.py  model_manager_server__test.py
services/model-sidecar/model_sidecar/util/model_config/: __init__.py  model_config.py
services/model-sidecar/model_sidecar/util/subprocess/: __init__.py  subprocess.py
site/: README.md
site/app/: Cargo.toml  README.md
site/app/src/: app.rs  main.rs
site/app/src/app/: app.rs  config.rs
site/app/src/app/app/: dioxus_app.rs
site/components/: Cargo.toml
site/pages/: Cargo.toml
site/pages/src/: lib.rs
util/: README.md
util/ramate-web/: Cargo.toml
(+49 files in other folders)
