
[package]
name = "echo_service"
version = "0.0.1"
edition = "2021"

[lib]
path = "./src/lib.rs"

[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"

[dependencies]
tonic = "0.9"
tonic-reflection = "0.9"
tonic-web = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.11"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3.5"
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1.56"
futures-locks = "0.7.0"
rayon = "1.5.3"
bytes = "1"
prost-types = "0.11"
prost-derive = "0.11.9"
regex = "1.8.1"
reqwest = { version = "0.11", features = ["json"] }
sendgrid_rs = { path = "../../packages/sendgrid-rs" }
twilio_rs = { path = "../../packages/twilio-rs" }
lazy_static = "1.4.0"
dotenv = "0.15.0"
once_cell = "1.17.1"
redis = { version = "0.23.0", features = ["tokio-comp"] }
anyhow = "1.0.71"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = { version = "0.9.2" , features = ["prost"] }
